--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <!-- Login Modal -->
+    <!-- Login -->
     <div class="modal" id="loginModal">
         <div class="modal-content">
             <span class="close-btn" id="closeLogin">✕</span>
@@ -119,7 +119,7 @@
         </div>
     </div>
 
-    <!-- Signup Modal -->
+    <!-- Signup -->
     <div class="modal" id="signupModal">
         <div class="modal-content">
             <span class="close-btn" id="closeSignup">✕</span>
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <!-- Cart Modal -->
+    <!-- Cart -->
     <div class="modal" id="cartModal">
         <div class="modal-content">
             <span class="close-btn" id="closeCart">✕</span>
@@ -171,4 +171,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
